// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Array [
  Object {
    "selection": Array [],
  },
  Array [
    "collapsed",
  ],
]
`;

exports[`selectmachine via TOGGLE: reaches state: "#(machine).expanded" ({"selection":[]}) 1`] = `
Array [
  Object {
    "selection": Array [],
  },
  Array [
    "expanded",
  ],
]
`;
